# cos-ecuador

./: # Plan Maestro de Acciones — Comple.txt  .gitignore  BLUEPRINT_PLAN_CREACION.md  COS_BLUEPRINT.md  Lo que planteas no es desarrollar u.txt  Opción A.txt  PLAN_DEEPSEEK_V4_FLASH_COS_ECUADOR.md  PLAN_MAESTRO_100_PORCIENTO_v2.0.md  PRE0_DISCOVERY_KIT.md  PROMPT_MAESTRO_COS.md  analysis_results.md  diagnostico.ps1  diagnostico.sh  docker-compose.yml  infisical.json  package-lock.json  tax-engine-err.txt
command-center/services/tax/: Dockerfile  pyproject.toml
command-center/services/tax/app/: config.py  database.py  main.py
command-center/services/tax/app/api/: deps.py
command-center/services/tax/app/calculators/: constants.py  iva_calculator.py  renta_calculator.py  retenciones_calculator.py
command-center/services/tax/app/generators/: ats_generator.py
command-center/services/tax/app/services/: cruces_service.py
command-center/services/tax/app/sri/: client.py  invoice_generator.py  orchestrator.py  xml_signer.py
command-center/services/tax/tests/: test_ats_generator.py  test_facturacion_electronica.py  test_iva_calculator.py  test_renta_calculator.py  test_retenciones.py
cos/services/ai-orchestrator/: .env.example  Dockerfile  main.py  pyproject.toml
cos/services/ai-orchestrator/agents/: financial_agent.py  orchestrator.py  tax_agent.py
cos/services/ai-orchestrator/app/agents/: __init__.py  commercial_agent.py  hr_agent.py  langgraph_orchestrator.py  legal_agent.py  risk_agent.py  router_node.py  strategy_agent.py
cos/services/ai-orchestrator/app/rag/: rag_service.py
cos/services/ai-orchestrator/models/: api.py  schemas.py  state.py
cos/services/ai-orchestrator/tools/: financial_tools.py  tax_tools.py
(+1350 files in other folders)
