[tool.poetry]
name = "tax-service"
version = "1.0.0"
description = "Motor Tributario Ecuador - SRI Compliance"
authors = ["Carlos Alman Vidal"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"
httpx = "^0.27.0"
lxml = "^5.3.0"
python-dateutil = "^2.9.0"
pyhumps = "^3.0.2"
structlog = "^24.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
ruff = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
