[project]
name = "cos-ai-orchestrator"
version = "0.1.0"
description = "Multi-Agent System for Consulting OS — LangGraph + FastAPI"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "numpy>=2.1.0",
    "scipy>=1.14.0",
    "pandas>=2.2.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.12",
    "pdfplumber>=0.11.0",
    "python-dotenv>=1.0.0",
    "lxml>=5.3.0",
    "pgvector>=0.3.0",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "redis>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
